[package]
name = "omniroom2-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies", "stream"] }
reqwest-eventsource = { version = "0.3.0" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1", features = ["full"] }
futures = "0.3.5"
futures-core = "0.3.5"
futures-retry = "0.6"
eventsource-stream = "0.2.0"

gst = { package = "gstreamer", version = "0.18", features = ["v1_20"] }
gst_webrtc = { package = "gstreamer-webrtc", version = "0.18", features = ["v1_20"] }
gst_sdp = { package = "gstreamer-sdp", version = "0.18", features = ["v1_20"] }

clap = { version = "3.1.18", features = ["derive"] }
